--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
   text-align: center;
   height: 20vh;
 }
+.srvices{
+  color:red;
+  text-align: center;
+  height: 20vh;
+}
 body{
   background-image: url(matrix.jpg);
   background-size: cover;
