--- a/style.css
+++ b/style.css
@@ -54,3 +54,11 @@ button:hover{
   transform: scale(1.3);
   cursor: pointer;
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
