--- a/style.css
+++ b/style.css
@@ -40,12 +40,22 @@ nav ul li a:hover{
   color: #ea1538;
   transition: .3s;
 }
-button{
+.GFC{
   border: none;
   background: #ea1538;
   padding: 12px 30px;
   border-radius: 30px;
   color: white;
+  font-weight: bold;
+  font-size: 15px;
+  transition: .4s;
+}
+.discord{
+  border: none;
+  background: black;
+  padding: 12px 30px;
+  border-radius: 30px;
+  color:black;
   font-weight: bold;
   font-size: 15px;
   transition: .4s;
